Hide overflow to fix scrollbar displaying in OBS

--- a/app/css/background.css
+++ b/app/css/background.css
@@ -13,6 +13,7 @@ body {
 	height: 1080px;
 	margin: 0;
 	box-shadow: inset 4px 10px 20px 2px rgba(75, 75, 75, 0.50);
+	overflow: hidden;
 }
 
 /* ----------------------------------------------
